--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,24 +11,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="158dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="159dp"
         android:layout_marginBottom="290dp"
         android:text="ROLL"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgDiceOutput" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imgDiceOutput"
+        android:id="@+id/imgDice"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginStart="141dp"
-        android:layout_marginTop="241dp"
-        android:layout_marginEnd="142dp"
-        android:src="@tools:sample/avatars"
+        android:layout_marginStart="155dp"
+        android:layout_marginTop="238dp"
+        android:layout_marginEnd="156dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
